Readme and credits

--- a/README
+++ b/README
@@ -1,7 +1,5 @@
-Welcome to the Kember Identity script pool.
-
-I've had so many entries that I've decided to put everything on GitHub.
+Welcome to the Kember Identity script pool. I've had so many entries that I've decided to put everything on GitHub. 
 
 Some of the scripts suck, and some are awesome. You can create your own using the rough syntax language-firstname-lastname.extension. 
 
-This should help for benchmarking.
+Put your details in CREDITS, and the languages you've used!
